test/tests/stages/17_supporting_dynamic_memory_allocation/invalid_types/void/void_compare.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[1]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[2]: 
            CS: 
              CIf: 
                CBinary: 
                  CLessThan: 
                  CCast: 
                    CConstant: 
                      CConstInt: 
                        TInt: 1
                      None: 
                    Void: 
                    None: 
                  CCast: 
                    CConstant: 
                      CConstInt: 
                        TInt: 2
                      None: 
                    Void: 
                    None: 
                  None: 
                CReturn: 
                  CConstant: 
                    CConstInt: 
                      TInt: 1
                    None: 
                None: 
            CS: 
              CReturn: 
                CConstant: 
                  CConstInt: 
                    TInt: 0
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
